added login and sign up pages in html templates and handlebars

--- a/views/signupPage.handlebars
+++ b/views/signupPage.handlebars
@@ -1,10 +1,10 @@
 <div class="container has-background-warning-light is-fullheight">
         <div class="hero is-fullheight">
-          <h1 class="is-size-1 has-text-centered has-text-weight-bold">Login</h1>
+          <h1 class="is-size-1 has-text-centered has-text-weight-bold">Sign Up</h1>
             <div class="hero-body colums is-justify-content-center is-align-items-center">
                 <div class="columns is-flex is-flex-direction-column box has-background-info-light">
                     <div class="label">
-                        <label for="Username">Username</label>
+                        <label for="Login">Username</label>
                         <input class="input is-dark" id = "username-login" type="text" placeholder="Username">
                     </div>
                     <div class="label">
@@ -12,7 +12,7 @@
                         <input class="input is-dark" id = "password-login" type="text" placeholder="Password">
                     </div>
                     <div class="column">
-                        <button id="logInButton" class="button has-background-info-dark has-text-success-light is-fullwidth" type="submit">Log In</button>
+                        <button id="sign-up-button" class="button has-background-info-dark has-text-success-light is-fullwidth" type="submit">Sign Up</button>
                     </div>
                 </div>
             </div>
