added to main page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,19 +9,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-    <header class="hero">
-        <h1 class="main-title">Welcome To Sebastian's Blog</h1>
-    </header>
-    <nav class="navbar">
-        <ul>
-            <li class="nav-links"><a href="/">Home</a></li>
-            <li class="nav-links"><a href="/dashboard">Dashboard</a></li>
-            <li class="nav-links"><a href="/login">Login</a></li>
-            <li class="nav-links"><a href="/#">Logout</a></li>
-        </ul>
-    </nav>
-    <div>
-        {{{body}}}
+    <div class="page-container">
+        <div class="home-page">
+            <nav class="navbar has-background-info-dark has-shadow">
+                <div class="navbar-brand">
+                    <div class="proj-name "> </div>
+                </div>
+            </nav>
+        </div>
+
     </div>
     <footer class="footer">
         Made by Sebatian Tischner
