--- a/views/loginPage.handlebars
+++ b/views/loginPage.handlebars
@@ -4,17 +4,19 @@
             <div class="hero-body colums is-justify-content-center is-align-items-center">
                 <div class="columns is-flex is-flex-direction-column box has-background-info-light">
                     <div class="label">
-                        <label for="Username">Username</label>
-                        <input class="input is-dark" id = "username-login" type="text" placeholder="Username">
+                        <label for="email-login">Email:</label>
+                        <input class="input is-dark" id = "email-login" type="text" placeholder="Username">
                     </div>
                     <div class="label">
-                        <label for="Password">Password</label>
-                        <input class="input is-dark" id = "password-login" type="text" placeholder="Password">
+                        <label for="password-login">Password:</label>
+                        <input class="input is-dark" id = "password-login" type="password" placeholder="Password">
                     </div>
                     <div class="column">
                         <button id="logInButton" class="button has-background-info-dark has-text-success-light is-fullwidth" type="submit">Log In</button>
+                        <a href="/signup"><button type="button" class="button has-background-info-dark has-text-success-light is-fullwidth">Sign Up</button></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="/javascript/login.js"></script>
