--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,12 +4,16 @@
             <div class="hero-body colums is-justify-content-center is-align-items-center">
                 <div class="columns is-flex is-flex-direction-column box has-background-info-light">
                     <div class="label">
-                        <label for="Login">Username</label>
-                        <input class="input is-dark" id = "username-login" type="text" placeholder="Username">
+                        <label for="username-signup">Username:</label>
+                        <input class="input is-dark" id="username-signup" type="text" placeholder="Username">
                     </div>
                     <div class="label">
-                        <label for="Password">Password</label>
-                        <input class="input is-dark" id = "password-login" type="text" placeholder="Password">
+                        <label for="email-signup">Email:</label>
+                        <input class="input is-dark" id="email-signup" type="text" placeholder="Email">
+                    </div>
+                    <div class="label">
+                        <label for="password-signup">Password:</label>
+                        <input class="input is-dark" id="password-signup" type="text" placeholder="Password">
                     </div>
                     <div class="column">
                         <button id="sign-up-button" class="button has-background-info-dark has-text-success-light is-fullwidth" type="submit">Sign Up</button>
@@ -18,3 +22,5 @@
             </div>
         </div>
     </div>
+
+    <script src="/javacript/signup.js"></script>
