--- a/views/loginPage.handlebars
+++ b/views/loginPage.handlebars
@@ -5,11 +5,11 @@
                 <div class="columns is-flex is-flex-direction-column box has-background-info-light">
                     <div class="label">
                         <label for="email-login">Email:</label>
-                        <input class="input is-dark" id = "email-login" type="text" placeholder="Username">
+                        <input class="input is-dark" id="email-login" type="text" placeholder="Email" />
                     </div>
                     <div class="label">
                         <label for="password-login">Password:</label>
-                        <input class="input is-dark" id = "password-login" type="password" placeholder="Password">
+                        <input class="input is-dark" id="password-login" type="password" placeholder="Password" />
                     </div>
                     <div class="column">
                         <button id="logInButton" class="button has-background-info-dark has-text-success-light is-fullwidth" type="submit">Log In</button>
