--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,15 +5,15 @@
                 <div class="columns is-flex is-flex-direction-column box has-background-info-light">
                     <div class="label">
                         <label for="username-signup">Username:</label>
-                        <input class="input is-dark" id="username-signup" type="text" placeholder="Username">
+                        <input class="input is-dark" id="username-signup" type="text" placeholder="Username"/>
                     </div>
                     <div class="label">
                         <label for="email-signup">Email:</label>
-                        <input class="input is-dark" id="email-signup" type="text" placeholder="Email">
+                        <input class="input is-dark" id="email-signup" type="text" placeholder="Email"/>
                     </div>
                     <div class="label">
                         <label for="password-signup">Password:</label>
-                        <input class="input is-dark" id="password-signup" type="text" placeholder="Password">
+                        <input class="input is-dark" id="password-signup" type="text" placeholder="Password"/>
                     </div>
                     <div class="column">
                         <button id="sign-up-button" class="button has-background-info-dark has-text-success-light is-fullwidth" type="submit">Sign Up</button>
