--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylessheet" type="styles.css" href="../../public/css/style.css"
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    
+    <title>{{{Title}}} </title>
+
 </head>
 <body>
      <nav class="navbar has-background-info-dark">
@@ -22,7 +25,7 @@
             <button id="logout" class="button is-info">logout</button>
             {{else}}
             <a href="/" class="navbar-item is-hoverable pt-1">Homepage</a>
-            <a href="/login" class="button is-info">Login</a>
+            <a href="/login" class="navbar-item is-info-light">Login</a>
             {{/if}}
       </nav>
 
@@ -38,5 +41,6 @@
       </footer>
       {{#if loggedIn}}
       <script src="/javascript/logout.js"></script>
+      {{/if}}
 </body>
 </html>
