--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -23,4 +23,4 @@
         </div>
     </div>
 
-    <script src="/javacript/signup.js"></script>
+    <script src="../public/js/signup.js"></script>
