--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
             <button id="logout" class="button is-info">logout</button>
             {{else}}
             <a href="/" class="navbar-item is-hoverable pt-1">Homepage</a>
-            <a href="/login" class="navbar-item is-info-light">Login</a>
+            <a href="/login" class="navbar-item is-info-light pt-1">Login</a>
             {{/if}}
       </nav>
 
@@ -40,7 +40,7 @@
         </div>
       </footer>
       {{#if loggedIn}}
-      <script src="/javascript/logout.js"></script>
+      <script src="../../public/js/logout.js"></script>
       {{/if}}
 </body>
 </html>
