--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,4 +19,4 @@
             </div>
         </div>
     </div>
-    <script src="/javascript/login.js"></script>
+    <script src="../public/js/login.js"></script>
