worked on routes

--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -3,7 +3,7 @@
           <a href="/dashboard" class="is-pulled-right">Back To Dashboard</a>
         <h1 class="is-size-1 has-text-centered has-text-weight-bold">Create A New Post</h1>
           <div class="hero-body columns">
-              <div class="column is-two-thirds is-flex is-flex-direction-column box has-background-info-light">
+              <form class=" new-post-form column is-two-thirds is-flex is-flex-direction-column box has-background-info-light">
                   <div class="label">
                       <label for="post-title">Title:</label>
                       <input class="input is-dark" type="text" id="post-title" name="post-title" placeholder="Guess What EveryBody!">
@@ -15,9 +15,9 @@
                   <div class="column">
                       <button id="sign-up-button" class="button has-background-info-dark has-text-success-light is-pulled-right" type="submit">Create Post</button>
                   </div>
-              </div>
+              </form>
           </div>
       </div>
   </div>
 
-  <script src="/javascript/add-post.js"></script>
+  <script src="/js/add-post.js"></script>
