--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,7 +4,7 @@
           <h1 class="is-size-1 has-text-centered has-text-weight-bold">Dashboard</h1>
         </div>
         <div>
-            <button href="/dashboard/create" id="create-post" class="button has-background-info">New Post</button>
+            <button id="create-post" class="button has-background-info"><a href="/post">New Post</a></button>
         </div>
         <div>
         {{#if posts.length}}
