--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -3,7 +3,7 @@
           <div class="hero-body columns">
               <div class="column is-two-thirds is-flex is-flex-direction-column box has-background-info-light">
                   <p class="has-text-info-light"></p>
-                      <a href="/post{{id}}" class="has-text-dark is-pulled-left">{{title}}</a></p>
+                      <a href="/post/{{id}}" class="has-text-dark is-pulled-left">{{title}}</a></p>
                       </div>
                   <div class="column">
                       <span class=""></span>
