--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <div class="container has-background-warning-light is-fullheight">
         <div class="hero is-fullheight">
           <h1 class="is-size-1 has-text-centered has-text-weight-bold">Sign Up</h1>
-            <div class="hero-body colums is-justify-content-center is-align-items-center">
+            <form id="signup" class="hero-body colums is-justify-content-center is-align-items-center">
                 <div class="columns is-flex is-flex-direction-column box has-background-info-light">
                     <div class="label">
                         <label for="username-signup">Username:</label>
@@ -19,7 +19,7 @@
                         <button id="sign-up-button" class="button has-background-info-dark has-text-success-light is-fullwidth" type="submit">Sign Up</button>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 
