--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
         </div>
       </footer>
       {{#if loggedIn}}
-      <script src="../../public/js/logout.js"></script>
+      <script src="/js/logout.js"></script>
       {{/if}}
 </body>
 </html>
