--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="container has-background-warning-light is-fullheight">
         <div class="hero is-fullheight">
           <h1 class="is-size-1 has-text-centered has-text-weight-bold">Login</h1>
-            <div class="hero-body colums is-justify-content-center is-align-items-center">
+            <form id="login" class="hero-body colums is-justify-content-center is-align-items-center">
                 <div class="columns is-flex is-flex-direction-column box has-background-info-light">
                     <div class="label">
                         <label for="email-login">Email:</label>
@@ -16,7 +16,7 @@
                         <a href="/signup"><button type="button" class="button has-background-info-dark has-text-success-light is-fullwidth">Sign Up</button></a>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
     <script src="/js/login.js"></script>
