--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -19,5 +19,5 @@
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src-".javascriptcomment.js"></script>
+<script src="/js/comment.js"></script>
 {{/if}}
