--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,16 +1,15 @@
 <div class="container has-background-warning-light is-fullheight">
       <div class="hero is-large">
-          <a href="/dashboard" class="is-pulled-right">Back To Dashboard</a>
         <h1 class="is-size-1 has-text-centered has-text-weight-bold">Create A New Post</h1>
           <div class="hero-body columns">
-              <form class=" new-post-form column is-two-thirds is-flex is-flex-direction-column box has-background-info-light">
+              <form class=" new-post-form  box has-background-info-light">
                   <div class="label">
                       <label for="post-title">Title:</label>
                       <input class="input is-dark" type="text" id="post-title" name="post-title" placeholder="Guess What EveryBody!">
                   </div>
                   <div class="label">
                       <label for="post-content">Content:</label>
-                      <input class="textarea is-large is-dark" id="post-content" name="post-content"placeholder="I learned a for loop today!">
+                      <input class="textarea is-large is-dark" id="post-content" name="post-content"placeholder="I learned a for loop!">
                   </div>
                   <div class="column">
                       <button id="sign-up-button" class="button has-background-info-dark has-text-success-light is-pulled-right" type="submit">Create Post</button>
