--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,26 +1,17 @@
-
-    <div class="container has-background-warning-light is-fullheight">
-        <div class="hero is-fullheight">
-          <h1 class="is-size-1 has-text-centered has-text-weight-bold">Dashboard</h1>
-        </div>
+<div class="container has-background-warning-light">
+    <div>
+        <h1 class="is-size-1 has-text-centered has-text-weight-bold">Dashboard</h1>
         <div>
-            <button id="create-post" class="button has-background-info"><a href="/post">New Post</a></button>
+            {{#if posts.length}}
         </div>
-        <div>
-        {{#if posts.length}}
-        </div>
-
         {{#each posts as |post|}}
-        {{> post-info post}}
-
         <a href="/dashboard/edit/{{post.id}}"><button class="button has-background-info">Edit Post</button></a>
-        </div>
-        {{/each}}
-
-        {{else}}
-        <h5 class="pb-5 has-text centered is-itallic">Currently, there are no posts</h5>
+        {{> post-info post}}
+        
     </div>
+    {{/each}}
 
+    {{else}}
+    <h5 class="pb-5 has-text centered is-itallic">Currently, there are no posts</h5>
     {{/if}}
-    
-    
+</div>
