--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -2,11 +2,10 @@
 
 
 <div class="container has-background-warning-light is-fullheight">
-      <div class="hero is-large">
-          <a href="/dashboard" class="is-pulled-right">Back To Dashboard</a>
+      <div class="hero is-medium">
         <h1 class="is-size-1 has-text-centered has-text-weight-bold">Edit Post</h1>
           <form class="hero-body columns edit-post-form">
-              <div class="column is-two-thirds is-flex is-flex-direction-column box has-background-info-light">
+              <div class="column box has-background-info-light">
                   <div class="label">
                       <label for="post-title"> Post Title:</label>
                       <input class="input is-dark" type="text" name="post-title" value="{{post.title}}" />
@@ -17,7 +16,7 @@
                   </div>
                   <div class="is-pulled-right">
                       created by you on {{format_date post.created_at}}
-                      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
+                      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}} {{> comments post.comments}}</a>
                   </div>
                   <div class="column">
                       <button class="button has-background-info-dark has-text-success-light is-pulled-right" type="submit">Save Post</button>
@@ -28,7 +27,7 @@
       </div>
   </div>
 
-  {{> comments post.comments}}
+  
 
   <script src="/js/edit-post.js"></script>
   <script src="/js/delete-post.js"></script>
